Update Machine Learning Assignment - 1.ipynb

--- a/Machine Learning Assignment - 1.ipynb
+++ b/Machine Learning Assignment - 1.ipynb
@@ -5,7 +5,7 @@
    "id": "91f1ffa1",
    "metadata": {},
    "source": [
-    "# Assignment - 39 (Machine Learning)"
+    "# Machine Learning Assignment - 1 "
    ]
   },
   {
